# LibCMaker_Cairo

./: .appveyor.yml  .travis.yml  README.md  cmr_build_cairo.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_cairo.cmake  cmr_find_package_cairo.cmake  cmr_get_download_params_cairo.cmake
cmake/modules/: FindCairo.cmake
patch/Cairo_CMake_Files/: CMakeLists.txt  README.md  cairo-features.h.cmake  config.h.cmake  configure.cmake
patch/Cairo_CMake_Files/cmake/: AutoconfHelper.cmake  CairoHelper.cmake  CheckFileOffsetBits.cmake  FindFreetype.cmake  FindHarfBuzz.cmake  FindLibM.cmake  FindPNG.cmake  FindPixman.cmake  FindThreads.cmake  FindX11.cmake  FindZLIB.cmake  TestLargeFiles.cmake
patch/Cairo_CMake_Files/src/: CMakeLists.features.cmake  CMakeLists.sources.cmake  CMakeLists.txt
samples/TestCompileWithCairo/: CMakeLists.txt  README.md
samples/TestCompileWithCairo/src/: cairo_snippets_pdf.c  cairo_snippets_png.c  example_test.c  example_test.h  example_test_to_gtest.cpp  snippets.c
samples/TestCompileWithCairo/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt
samples/ci_sample/src/: cairo_snippets_ps.c  snippets.c  snippets.h
